--- a/k/vcluster/charts/vcluster/values.yaml
+++ b/k/vcluster/charts/vcluster/values.yaml
@@ -29,6 +29,8 @@ sync:
     enabled: true
   pods:
     enabled: true
+    ephemeralContainers: false
+    status: false
   events:
     enabled: true
   persistentvolumeclaims:
@@ -164,6 +166,9 @@ serviceAccount:
   create: true
   # Optional name of the service account to use
   # name: default
+  # Optional pull secrets
+  # imagePullSecrets:
+  #   - name: my-pull-secret
 
 # Roles & ClusterRoles for the vcluster
 rbac:
