--- a/k/vcluster/charts/vcluster/templates/rbac/role.yaml
+++ b/k/vcluster/charts/vcluster/templates/rbac/role.yaml
@@ -11,14 +11,26 @@ metadata:
     heritage: "{{ .Release.Service }}"
 rules:
   - apiGroups: [""]
-    resources: ["configmaps", "secrets", "services", "pods", "pods/attach", "pods/status", "pods/ephemeralcontainers", "pods/portforward", "pods/exec", "persistentvolumeclaims"]
+    resources: ["configmaps", "secrets", "services", "pods", "pods/attach", "pods/portforward", "pods/exec", "persistentvolumeclaims"]
     verbs: ["create", "delete", "patch", "update", "get", "list", "watch"]
-  {{- if .Values.sync.endpoints.enabled }}
+  {{- if or .Values.sync.pods.status .Values.rbac.role.extended }}
+  - apiGroups: [""]
+    resources: ["pods/status"]
+    verbs: ["create", "delete", "patch", "update", "get", "list", "watch"]
+  {{- end }}
+  {{- if or .Values.sync.pods.ephemeralContainers .Values.rbac.role.extended }}
+  {{- if ge (.Capabilities.KubeVersion.Minor | int) 23 }}
+  - apiGroups: [""]
+    resources: ["pods/ephemeralcontainers"]
+    verbs: ["patch", "update"]
+  {{- end }}
+  {{- end }}
+  {{- if or .Values.sync.endpoints.enabled .Values.rbac.role.extended }}
   - apiGroups: [""]
     resources: ["endpoints"]
     verbs: ["create", "delete", "patch", "update"]
   {{- end }}
-  {{- if .Values.enableHA }}
+  {{- if or .Values.enableHA .Values.rbac.role.extended }}
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["create", "delete", "patch", "update", "get", "list", "watch"]
