--- a/k/argocd/charts/argo-cd/Chart.yaml
+++ b/k/argocd/charts/argo-cd/Chart.yaml
@@ -1,8 +1,8 @@
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: update redis to 7.0.4 for avoiding CVE-2022-30065"
+    - "[Changed]: Update to app version 2.4.9"
 apiVersion: v2
-appVersion: v2.4.7
+appVersion: v2.4.9
 dependencies:
 - condition: redis-ha.enabled
   name: redis-ha
@@ -22,4 +22,4 @@ maintainers:
 - name: jessesuen
 - name: seanson
 name: argo-cd
-version: 4.10.3
+version: 4.10.6
