--- a/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
+++ b/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
@@ -170,6 +170,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ template "argo-workflows.controller.fullname" . }}-cluster-template
+  labels:
+    {{- include "argo-workflows.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
 rules:
 - apiGroups:
   - argoproj.io
