--- a/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-controller-sa.yaml
+++ b/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-controller-sa.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "argo-workflows.controllerServiceAccountName" . }}
+  labels:
+    {{- include "argo-workflows.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
   {{ with .Values.controller.serviceAccount.annotations }}
   annotations:
     {{- toYaml .| nindent 4 }}
