--- a/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-role.yaml
+++ b/k/argo-workflows/charts/argo-workflows/templates/controller/workflow-role.yaml
@@ -5,6 +5,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ template "argo-workflows.fullname" $ }}-workflow
+  labels:
+    {{- include "argo-workflows.labels" (dict "context" $ "component" $.Values.controller.name "name" $.Values.controller.name) | nindent 4 }}
     {{- with $namespace }}
   namespace: {{ . }}
     {{- end }}
