--- a/k/argo-workflows/charts/argo-workflows/templates/server/server-sa.yaml
+++ b/k/argo-workflows/charts/argo-workflows/templates/server/server-sa.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "argo-workflows.serverServiceAccountName" . }}
+  labels:
+    {{- include "argo-workflows.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
   {{- with .Values.server.serviceAccount.annotations  }}
   annotations:
     {{- toYaml . | nindent 4 }}
