--- a/Makefile.common
+++ b/Makefile.common
@@ -66,7 +66,6 @@ tilt:
 logout:
 	-echo yes | gh auth logout --hostname github.com
 	-argocd logout argocd-server.argocd.svc
-	-$(MAKE) vault-seal
 	cd .password-store && git checkout vault && git clean -fd vault && git crypt lock
 
 login:
@@ -74,7 +73,6 @@ login:
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
 	chmod 700 ~/.password-store/home/.gnupg ~/.gnupg
 	cd ~/.password-store && git pull
-	$(MAKE) git-crypt-unlock
 	$(MAKE) vault-unseal
 	if ! gh auth status; then $(MAKE) github-login; fi
 	$(MAKE) argocd-login
@@ -93,14 +91,12 @@ gpg:
 	rsync -ia .password-store/home/.gnupg/. .gnupg/.
 	chmod 700 .gnupg
 	gpg --import .password-store/keys/EBE020A544E04B9C67215280B8B6F42683E6CCEF/private.gpg 
-	$(MAKE) git-crypt-unlock
 
 git-crypt-unlock:
 	cd .password-store && if ! git crypt unlock; then \
 		gpg -d .password-store/.git-crypt-key > .password-store/key; \
 		cd .password-store && git crypt unlock key; \
-		rm -f .password-store/key; \
-		fi
+		rm -f .password-store/key
 
 kubeconfig:
 	sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
