--- a/tf/Makefile
+++ b/tf/Makefile
@@ -25,6 +25,11 @@ clean:
 
 init:
 	terraform init -upgrade
+	terraform providers lock \
+		-platform=linux_arm64 \
+		-platform=linux_amd64 \
+		-platform=darwin_amd64 \
+		-platform=darwin_arm64
 
 upgrade:
 	terraform init -upgrade
