use defn/dev to get a clean tailscale state

--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -7,7 +7,7 @@ get-state:
 	pass tailscale_$(name) | base64 -d > tailscaled.state
 
 mint:
-	docker run --rm -ti --privileged --entrypoint sh defn.dev/defn/k3d -c \
+	docker run --rm -ti --privileged --entrypoint sh defn.dev/defn/dev -c \
 		"mkdir -p /var/lib/tailscale; \
 		/tailscaled -statedir /var/lib/tailscale & \
 		/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
