--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -8,8 +8,8 @@ get-state:
 
 mint:
 	docker run --rm -ti --privileged --entrypoint sh defn/dev -c \
-		"mkdir -p /var/lib/tailscale; \
-		/tailscaled -statedir /var/lib/tailscale & \
-		/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
+		"sudo mkdir -p /var/lib/tailscale; \
+		sudo /tailscaled -statedir /var/lib/tailscale & \
+		sudo /tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
 		sleep 10; \
-		while true; do if test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
+		while true; do if isudo test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; sudo cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
