--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -8,8 +8,9 @@ get-state:
 
 mint:
 	docker run --rm -ti --privileged --entrypoint sh defn/dev -c \
-		"sudo mkdir -p /var/lib/tailscale; \
+		"wget -O- https://pkgs.tailscale.com/stable/tailscale_1.28.0_amd64.tgz | tar xvfz -; cp */tailscale* /; \
+		sudo mkdir -p /var/lib/tailscale; \
 		sudo /tailscaled -statedir /var/lib/tailscale & \
 		sudo /tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
 		sleep 10; \
-		while true; do if isudo test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; sudo cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
+		while true; do if sudo test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; sudo cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
