--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -7,10 +7,10 @@ get-state:
 	pass tailscale_$(name) | base64 -d > tailscaled.state
 
 mint:
-	docker run --rm -ti --privileged --entrypoint sh defn/dev -c \
-		"wget -O- https://pkgs.tailscale.com/stable/tailscale_1.28.0_amd64.tgz | tar xvfz -; sudo cp */tailscale* /; \
+	docker run --rm -ti --privileged --entrypoint sh quay.io/defn/dev -c \
+		"set -x; \
 		sudo mkdir -p /var/lib/tailscale; \
-		sudo /tailscaled -statedir /var/lib/tailscale & \
-		sudo /tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
+		sudo /usr/sbin/tailscaled -statedir /var/lib/tailscale & \
+		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key));  \
 		sleep 10; \
 		while true; do if sudo test -f /var/lib/tailscale/tailscaled.state; then (echo -n 'STATE '; sudo cat /var/lib/tailscale/tailscaled.state | base64 -w 0); break; fi; sleep 1; done;" | grep ^STATE | awk '{print $$2}' | pass insert -e -f tailscale_$(name)
