--- a/tf/Makefile
+++ b/tf/Makefile
@@ -73,3 +73,11 @@ kubeconfig:
 
 attach:
 	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+$(workdir)
+
+archive:
+	rm -rf tmp
+	mkdir tmp
+	mkdir -p tmp/global/home/ubuntu/d/k3d
+	pass tailscale_k3d-global > tmp/global/home/ubuntu/d/k3d/tailscaled.state
+	echo -n "archive = \"$$(cd tmp/global && tar cvfz - main.tf | base64 -w 0)\"" > terraform.tfvars
+	rm -rf tmp
