decode tailscale from pass

--- a/tf/Makefile
+++ b/tf/Makefile
@@ -78,6 +78,6 @@ archive:
 	rm -rf tmp
 	mkdir tmp
 	mkdir -p tmp/$(name)/home/ubuntu/d/k3d
-	pass tailscale_k3d-$(name) > tmp/$(name)/home/ubuntu/d/k3d/tailscaled.state
+	pass tailscale_k3d-$(name) | base64 -d > tmp/$(name)/home/ubuntu/d/k3d/tailscaled.state
 	echo -n "archive = \"$$(cd tmp/$(name) && tar cvfz - . | base64 -w 0)\"" > terraform.tfvars
 	rm -rf tmp
