--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -1,9 +1,6 @@
 build:
 	wget -O- https://pkgs.tailscale.com/stable/tailscale_1.28.0_amd64.tgz | tar xvfz -
-	docker build -t defn.dev/defn/k3d .
-
-get-state:
-	pass tailscale_$(name) | base64 -d > tailscaled.state
+	docker build -t defn.dev/defn/k3d --build-arg DEFN_DEV_ARCHIVE=${DEFN_DEV_ARCHIVE} .
 
 mint:
 	docker run --rm -ti --privileged --entrypoint sh quay.io/defn/dev -c \
