--- a/tf/Makefile
+++ b/tf/Makefile
@@ -77,12 +77,12 @@ attach:
 archive:
 	rm -rf tmp
 	mkdir tmp
-	mkdir -p tmp/$(name)/home/ubuntu/d/k3d
+	mkdir -p tmp/$(name)/var/lib/tailscale
 	mkdir -p tmp/$(name)/var/lib/rancher/k3s/server/tls
 	pass k3d-$(name)-client-ca.crt | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/client-ca.crt
 	pass k3d-$(name)-client-ca.key | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/client-ca.key
 	pass k3d-$(name)-server-ca.crt | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/server-ca.crt
 	pass k3d-$(name)-server-ca.key | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/server-ca.key
-	pass tailscale_k3d-$(name) | base64 -d > tmp/$(name)/home/ubuntu/d/k3d/tailscaled.state
+	pass tailscale_k3d-$(name) | base64 -d > tmp/$(name)/var/lib/tailscale/tailscaled.state
 	echo -n "archive = \"$$(cd tmp/$(name) && tar cvfz - . | base64 -w 0)\"" > terraform.tfvars
 	rm -rf tmp
