busybox doesnt do z

--- a/tf/Makefile
+++ b/tf/Makefile
@@ -84,5 +84,5 @@ archive:
 	pass k3d-$(name)-server-ca.crt | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/server-ca.crt
 	pass k3d-$(name)-server-ca.key | base64 -d > tmp/$(name)/var/lib/rancher/k3s/server/tls/server-ca.key
 	pass tailscale_k3d-$(name) | base64 -d > tmp/$(name)/var/lib/tailscale/tailscaled.state
-	echo -n "archive = \"$$(cd tmp/$(name) && tar cvfz - . | base64 -w 0)\"" > terraform.tfvars
+	echo -n "archive = \"$$(cd tmp/$(name) && tar cvf - . | base64 -w 0)\"" > terraform.tfvars
 	rm -rf tmp
