--- a/e/k3d-defn.yaml
+++ b/e/k3d-defn.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sets-defn
+  name: k3d-defn
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/defn/dev
-    path: e/defn
+    path: e/k3d-defn
     targetRevision: main
   destination:
     name: in-cluster
