--- a/e/k3d-global.yaml
+++ b/e/k3d-global.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sets-remo-global
+  name: k3d-global
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/defn/dev
-    path: e/remo-global
+    path: e/k3d-global
     targetRevision: main
   destination:
     name: in-cluster
