--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 enable-ssh-support
 default-cache-ttl 1800
 max-cache-ttl 3600
-pinentry-program /usr/local/bin/pinentry-mac
+pinentry-program /usr/local/bin/pinentry
