--- a/e/imma.yaml
+++ b/e/imma.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sets-imma
+  name: imma
   namespace: argocd
 spec:
   project: default
