--- a/Makefile.common
+++ b/Makefile.common
@@ -58,7 +58,7 @@ init-argocd:
 
 init-sets:
 	cd "$${DEFN_DEV_WORKDIR:-$${HOME}}" && kubectl --context argocd apply -f e/$(control).yaml
-	argocd app sync sets-$(control)
+	argocd app sync $(control)
 	argocd app list
 
 tilt:
