--- a/Makefile.common
+++ b/Makefile.common
@@ -49,7 +49,7 @@ init-inner:
 deploy:
 	if kubectl --context pod create namespace argocd; then $(MAKE) init-argocd; fi
 	$(MAKE) init-sets
-	argocd app sync argocd
+	argocd app sync $(control)-argocd
 
 init-argocd:
 	kustomize build --enable-helm k/argocd | kubectl --context argocd apply -f -
