--- a/e/k3d-imma/main.yaml
+++ b/e/k3d-imma/main.yaml
@@ -1,10 +1,8 @@
-apiVersion argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: imma
+  name: k3d-imma
   namespace: argocd
-  labels:
-    argocd.argoproj.io/instance: sets
 spec:
   generators:
     - list:
@@ -59,7 +57,7 @@ spec:
             path: dev
   template:
     metadata:
-      name: "imma-{{name}}"
+      name: "k3d-imma-{{name}}"
       namespace: argocd
     spec:
       project: default
