set tailscale state as a secret

--- a/tf/fly/flies/Dockerfile
+++ b/tf/fly/flies/Dockerfile
@@ -1,9 +1,8 @@
 FROM quay.io/defn/dev
 
 RUN sudo ssh-keygen -A
-COPY service /service
 RUN mkdir work
-COPY .password-store/ work/password-store
+COPY --chown=ubuntu:ubuntu .password-store/ work/password-store
 COPY service /service
 
 USER root
