--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,3 +1,4 @@
 %:
 	rsync -ia ~/.password-store/ .password-store
+	flyctl secrets set -a $@ --detach DEFN_DEV_TAILSCALE_STATE="$(pass tailscale_$@)" 
 	flyctl deploy -a $@ --remote-only --config app.toml
