--- a/Makefile.common
+++ b/Makefile.common
@@ -92,7 +92,7 @@ argocd-login:
 
 gpg:
 	if test -d /work; then ln -nfs /work .; fi
-	if test -d /mnt/lost+found; then sudo install -d -m 0700 -u ubuntu -o ubuntu /mnt/work; ln -nfs /mnt/work .; fi
+	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
 	-git clone https://github.com/jojomomojo/password-store work/password-store
 	rsync -ia .password-store/home/.gnupg/. .gnupg/.
 	chmod 700 .gnupg
