--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,4 +1,6 @@
 %:
-	rsync -ia ~/.password-store/ .password-store
 	-flyctl secrets set -a $@ --detach DEFN_DEV_TAILSCALE_STATE="$$(pass tailscale_$@)" 
 	flyctl deploy -a $@ --remote-only --config app.toml
+
+password:
+	flyctl ssh console -a "$(name)" -C "cat /home/ubuntu/.config/code-server/config.yaml"
