--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,5 +1,8 @@
 %:
-	-flyctl secrets set -a $@ --detach DEFN_DEV_TAILSCALE_STATE="$$(pass tailscale_$@)"  DEFN_DEV_HOST="$@.tiger-mamba.ts.net"
+	-flyctl secrets set -a $@ --detach \
+		DEFN_DEV_TAILSCALE_STATE="$$(pass tailscale_$@)" \
+		DEFN_DEV_HOST="$@.tiger-mamba.ts.net" \
+		PASSWORD="$(pass pass-code-server)"
 	flyctl deploy -a $@ --remote-only --config app.toml
 
 password:
