--- a/e/k3d-imma/main.yaml
+++ b/e/k3d-imma/main.yaml
@@ -7,49 +7,49 @@ spec:
   generators:
     - list:
         elements:
+          - name: kyverno
+            namespace: kyverno
+            path: kyverno
+            cluster: k3d-imma
           - name: argocd
             namespace: argocd
-            cluster: in-cluster
+            cluster: k3d-imma
             path: argocd
           - name: argocd-ingress
             namespace: argocd
-            cluster: in-cluster
+            cluster: k3d-imma
             path: argocd-ingress
           - name: cert-manager
             namespace: cert-manager
-            cluster: in-cluster
+            cluster: k3d-imma
             path: cert-manager
-          - name: kyverno
-            namespace: kyverno
-            cluster: in-cluster
-            path: kyverno
           - name: external-secrets
             namespace: external-secrets
-            cluster: in-cluster
+            cluster: k3d-imma
             path: external-secrets
           - name: argo-events
             namespace: argo-events
-            cluster: in-cluster
+            cluster: k3d-imma
             path: argo-events
           - name: argo-workflows
             namespace: argo-workflows
-            cluster: in-cluster
+            cluster: k3d-imma
             path: argo-workflows
           - name: dex
             namespace: dex
-            cluster: in-cluster
+            cluster: k3d-imma
             path: dex
           - name: traefik
             namespace: traefik
-            cluster: in-cluster
+            cluster: k3d-imma
             path: traefik
           - name: traefik-forward-auth
             namespace: traefik
-            cluster: in-cluster
+            cluster: k3d-imma
             path: traefik-forward-auth
           - name: dev
             namespace: default
-            cluster: in-cluster
+            cluster: k3d-imma
             path: dev
   template:
     metadata:
