--- a/Makefile.common
+++ b/Makefile.common
@@ -48,6 +48,7 @@ init-inner:
 
 deploy:
 	if kubectl --context pod create namespace argocd; then $(MAKE) init-argocd; fi
+	argocd --context argocd cluster add k3d-$(control)
 	$(MAKE) init-sets
 	argocd app sync k3d-$(control)-argocd
 	$(MAKE) deploy-site
