--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -7,3 +7,7 @@
 
 password:
 	flyctl ssh console -a "$(name)" -C "cat /home/ubuntu/.config/code-server/config.yaml"
+
+proxy-docker:
+	$(MAKE) so
+	while true; do flyctl --app "$(shell flyctl apps list | grep 'fly-builder' | awk '{print $$1}' | head -1)" proxy 2375:2375; sleep 1; done
