--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -1,5 +1,6 @@
 build:
 	wget -O- https://pkgs.tailscale.com/stable/tailscale_1.28.0_amd64.tgz | tar xvfz -
+	kustomize build --enable-helm ~/k/argocd > argocd.yaml
 	docker build -t defn.dev/defn/k3d --build-arg DEFN_DEV_ARCHIVE=${DEFN_DEV_ARCHIVE} .
 
 mint:
