--- a/Makefile.common
+++ b/Makefile.common
@@ -93,6 +93,7 @@ argocd-login:
 				&& argocd account update-password --new-password adminadmin --current-password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')")
 
 gpg:
+	-if test -d work; then rmdir work; fi
 	if test -d /work; then ln -nfs /work .; fi
 	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
 	-git clone https://github.com/jojomomojo/password-store work/password-store
