wait for devpod

--- a/Makefile.site
+++ b/Makefile.site
@@ -95,3 +95,4 @@ imma:
 	pass tailscale_k3d-$@ | base64 -d > tmp/$@/var/lib/tailscale/tailscaled.state
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$@ && tar cvf - . | base64)" DEFN_DEV_HOST=k3d-$@.${domain} DEFN_DEV_HOST_API=127.0.0.1 DEFN_DEV_IP="$$(host k3d-$@.$(domain) | grep 'has address' | awk '{print $$NF}')" $(MAKE) cluster name=$@
 	kubectl rollout -n argocd status deployment argocd-server --watch
+	kubectl rollout -n default status statefulset $@ --watch
