call login after gpg

--- a/Makefile.common
+++ b/Makefile.common
@@ -94,6 +94,7 @@ gpg:
 	-gpg-agent --daemon
 	gpg --import .password-store/keys/EBE020A544E04B9C67215280B8B6F42683E6CCEF/private.gpg
 	$(MAKE) git-crypt-unlock
+	$(MAKE) login
 
 git-crypt-unlock:
 	cd ~/.password-store && if ! git crypt unlock; then \
