--- a/Makefile.site
+++ b/Makefile.site
@@ -86,6 +86,7 @@ debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
 
 imma:
+	$(MAKE) macos
 	rm -rf tmp
 	mkdir tmp
 	mkdir -p tmp/$@/var/lib/tailscale
